# Auramore

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mod_manager.rs  platform.rs  security.rs
src/components/: Layout.tsx  ModCard.tsx
src/lib/: tauri.ts
src/pages/: Marketplace.tsx  ModManager.tsx  Settings.tsx
src/styles/: index.css
src/types/: mod.ts
